--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-form-generator",
-  "version": "2.3.4",
-  "description": "A schema-based form generator component for Vue.js",
-  "homepage": "https://github.com/vue-generators/vue-form-generator/",
+  "name": "vue-form-generator-v2",
+  "version": "1.0.0",
+  "description": "Fork do vue-form-generator com customizações e novos recursos.",
+  "homepage": "https://github.com/leandrocfe/vue-form-generator-v2",
   "main": "dist/vfg.js",
   "scripts": {
     "prebuild": "npm run test",
@@ -38,7 +38,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/vue-generators/vue-form-generator.git"
+    "url": "https://github.com/leandrocfe/vue-form-generator-v2.git"
   },
   "files": [
     "dist/vfg.js",
@@ -47,7 +47,7 @@
     "dist/vfg-core.css",
     "src"
   ],
-  "author": "Icebob",
+  "author": "Leandro C. Ferreira",
   "license": "MIT",
   "devDependencies": {
     "@vue/test-utils": "1.0.0-beta.11",
