--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "vue-form-generator-v2",
-	"version": "1.0.1",
+	"name": "vue-form-generator-v2-eng",
+	"version": "1.0.2",
 	"description": "Fork do vue-form-generator com customizações e novos recursos.",
 	"homepage": "https://github.com/leandrocfe/vue-form-generator-v2#readme",
 	"main": "dist/vfg.js",
@@ -38,8 +38,8 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/leandrocfe/vue-form-generator-v2.git",
-		"directory": "leandrocfe/vue-form-generator-v2"
+		"url": "https://github.com/leandrocfe/vue-form-generator-v2-eng.git",
+		"directory": "fabiobap/vue-form-generator-v2-eng"
 	},
 	"files": [
 		"dist/vfg.js",
@@ -49,9 +49,9 @@
 		"src"
 	],
 	"author": {
-		"name": "Leandro C Ferreira",
-		"email": "leandrocfe@gmail.com",
-		"url": "https://leandroferreira.me"
+		"name": "Fabio Baptista E. Ferreira",
+		"email": "fabiobap.mkt@gmail.com",
+		"url": "https://fabiobaptista.com.br"
 	},
 	"license": "MIT",
 	"devDependencies": {
